started working on a ../style-guide page for components, also built Slick Carousel into the project, see it on the homepage on mobile. :)

--- a/_layouts/product-page.html
+++ b/_layouts/product-page.html
@@ -2,33 +2,19 @@
 layout: default
 ---
 
-<div class="container-hero container-fluid">
+<div class="container-flush container-fluid">
 
 	<section class="row hero hero-page text-center">
-
 		<span class="hero-copy">
 			<!-- <h1>Introduce Your Dreams to Your Life</h1> -->
 			<h1>{{ page.heading }}</h1>
 		</span>
-
 	</section>
 
-</div>
-
-<div class="container p-b-xl">
-
 	<div class="col-md-8 col-md-offset-2">
-
-		<div>
-
 		<div class="page-content">
 			{{ content }}
 		</div>
-
-		</div>
-
 	</div>
 
 </div>
-
-<script src="{{ "/js/min/base-min.js" | prepend: site.baseurl }}"></script>
