--- a/css/base.scss
+++ b/css/base.scss
@@ -20,6 +20,8 @@
         "project-styles/button",
         "project-styles/layout",
         "project-styles/homepage",
+        "project-styles/hero",
+        "project-styles/slider",
         "project-styles/type",
         "project-styles/nav",
         "project-styles/footer"
