--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,68 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/min/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/min/base-min.js" | prepend: site.baseurl }}"></script>
 {% include productpage-scripts.html %}
 <!-- Slick Carousel Documentation http://kenwheeler.github.io/slick/ -->
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+<script src="{{ "/js/min/slick.min.js" | prepend: site.baseurl }}"></script>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+
+    $('.slick-images').slick({
+      infinite: true,
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      draggagle: true
+    });
+
+    $('.thumb-panel-group-stories').slick({
+      dots: false,
+      infinite: false,
+      speed: 300,
+      slidesToShow: 3,
+      slidesToScroll: 3,
+      responsive: [
+        {
+          breakpoint: 960,
+          settings: {
+            slidesToShow: 2.25,
+            slidesToScroll: 1,
+            infinite: false,
+            dots: false
+          }
+        },
+        {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 1.75,
+            slidesToScroll: 1,
+            infinite: false,
+            dots: false
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            slidesToShow: 1.5,
+            slidesToScroll: 1,
+            infinite: false,
+            dots: false
+          }
+        },
+        {
+          breakpoint: 340,
+          settings: {
+            slidesToShow: 1.25,
+            slidesToScroll: 1,
+            infinite: false,
+            dots: false
+          }
+        }
+        // You can unslick at a given breakpoint now by adding:
+        // settings: "unslick"
+        // instead of a settings object
+      ]
+    });
+
+  });
+</script>
