--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Payoff Inc.</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <link rel="stylesheet" type="text/css" href="{{ "/css/slick.css" | prepend: site.baseurl }}"/>
+
   <link rel="stylesheet" href="{{ "/css/base.css" | prepend: site.baseurl }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
