--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,29 +2,20 @@
 layout: default
 ---
 
-<div class="container-hero container-fluid">
+<div class="container-flush container-fluid">
 
 	<section class="row hero hero-page text-center">
-
 		<span class="hero-copy">
 			<!-- <h1>Introduce Your Dreams to Your Life</h1> -->
 			<h1>{{ page.heading }}</h1>
 		</span>
-
 	</section>
 
-</div>
-
-<div class="container p-b-xl">
-
 	<div class="col-md-8 col-md-offset-2">
-
 		{% include subnavs.html %}
-
 		<div class="page-content">
 			{{ content }}
 		</div>
-
 	</div>
 
 </div>
