--- a/_sass/project-styles/_custom-mixins.scss
+++ b/_sass/project-styles/_custom-mixins.scss
@@ -30,3 +30,59 @@
   -o-#{$property}: $value;
   #{$property}: $value;
 }
+
+@mixin button-var($color, $background, $border) {
+  color: $color;
+  background-color: $background;
+  border-color: $border;
+
+  &:focus,
+  &.focus {
+    color: $color;
+    background-color: lighten($background, 10%);
+        border-color: lighten($border, 10%);
+  }
+  &:hover {
+    color: $color;
+    background-color: lighten($background, 5%);
+        border-color: lighten($border, 5%);
+  }
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    color: $color;
+    background-color: lighten($background, 10%);
+        border-color: lighten($border, 10%);
+
+    &:hover,
+    &:focus,
+    &.focus {
+      color: $color;
+      background-color: lighten($background, 20%);
+          border-color: lighten($border, 20%);
+    }
+  }
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    background-image: none;
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &,
+    &:hover,
+    &:focus,
+    &.focus,
+    &:active,
+    &.active {
+      background-color: $background;
+          border-color: $border;
+    }
+  }
+
+  .badge {
+    color: $background;
+    background-color: $color;
+  }
+}
