--- a/_sass/project-styles/_layout.scss
+++ b/_sass/project-styles/_layout.scss
@@ -10,6 +10,7 @@ body {
   background-color: white;
   margin: 0 auto;
   position: relative;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.1);
 }
 
 .container-fluid > .row, .tab-pane > .row {
@@ -23,6 +24,28 @@ body {
   }
 }
 
-.btn-action {
-  @include button-variant($btn-action-color, $btn-action-bg, $btn-action-border);
+.navbar .container-fluid {
+  padding: 0;
+  @media (min-width: $screen-md) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.container-fluid>.navbar-header {
+  margin: 0;
+}
+
+.navbar .navbar-header {
+  padding: 0;
+  @media (min-width: $screen-md) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.slick-active, .slick-slide {
+  &:focus {
+    outline: 0;
+  }
 }
