--- a/_sass/project-styles/_layout.scss
+++ b/_sass/project-styles/_layout.scss
@@ -49,3 +49,53 @@ body {
     outline: 0;
   }
 }
+
+.label {
+  font-size: 36%;
+  margin-right: 0.5em;
+}
+
+.tooltip {
+
+  &.top .tooltip-arrow { border-top-color: $brand-primary; }
+  &.right .tooltip-arrow { border-right-color: $brand-primary; }
+  &.bottom .tooltip-arrow { border-bottom-color: $brand-primary; }
+  &.left .tooltip-arrow { border-left-color: $brand-primary; }
+
+  .tooltip-inner {
+    background: $brand-primary;
+    color: white;
+  }
+}
+
+.popover {
+  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1);
+}
+
+.modal.fade .modal-dialog {
+  -webkit-transform: translate(0, 50%);
+    -ms-transform: translate(0, 50%);
+    -o-transform: translate(0, 50%);
+    transform: translate(0, 50%);
+  transition: transform 0.6s $cubic;
+}
+
+.modal.in .modal-dialog {
+  -webkit-transform: translate(0, 25%);
+    -ms-transform: translate(0, 25%);
+    -o-transform: translate(0, 25%);
+    transform: translate(0, 25%);
+}
+
+.modal-content {
+  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1);
+}
+
+.modal-backdrop {
+  background-color: $black;
+}
+
+.modal-backdrop.in {
+    opacity: 0.75;
+    filter: alpha(opacity=75);
+}
